fix: upper background visibility

--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,8 @@
     font-weight: 600;
     border-radius: 0.75rem;
   }
+
+  .upperBackground {
+    background-image: url("./assets/UpperBackground.png");
+  }
 }
